--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "headroom.js": "^0.10.3",
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
@@ -23,7 +25,6 @@
     "styled-components": "^4.4.1"
   },
   "scripts": {
-    // "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
