--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "sweetalert2": "^9.4.0"
   },
   "scripts": {
     "dev": "react-scripts start",
