--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.1",
-    "sweetalert2": "^9.4.0"
+    "sweetalert2": "^9.4.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "dev": "react-scripts start",
