--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.1",
+    "styled-jsx": "^3.2.4",
     "sweetalert2": "^9.4.0"
   },
   "scripts": {
